apply plugin: 'com.android.application'

android {
    namespace 'com.aa.Aurakernel'
    compileSdk 34

    defaultConfig {
        applicationId "com.aa.Aurakernel"
        minSdk 26
        targetSdk 36
        versionCode 2
        versionName "2.5"
    }

    signingConfigs {
        release {
           def propsFile = rootProject.file('local.properties')
            def props = new Properties()
            if (propsFile.exists()) {
                props.load(new FileInputStream(propsFile))
            }

            storeFile file(props.getProperty('KEY_STORE_FILE') ?: '../my-release-key.jks')
            storePassword props.getProperty('KEY_STORE_PASSWORD') ?: System.getenv('KEY_STORE_PASSWORD')
            keyAlias props.getProperty('KEY_ALIAS') ?: System.getenv('KEY_ALIAS') ?: 'mykey'
            keyPassword props.getProperty('KEY_PASSWORD') ?: System.getenv('KEY_PASSWORD')

            enableV1Signing = true
            enableV2Signing = true
            enableV3Signing = true
        }
    }

    buildTypes {
        release {
            signingConfig signingConfigs.release
            minifyEnabled true
            shrinkResources true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

    lint {
        checkReleaseBuilds false
        abortOnError false
    }

    // ====== 新增：排除 hutool 的 META-INF 冲突文件 ======
    packaging {
        resources {
            excludes += ['META-INF/INDEX.LIST', 'META-INF/DEPENDENCIES']
        }
    }
}

dependencies {
    implementation fileTree(dir: "libs", include: ["*.jar"])
    implementation 'androidx.core:core:1.13.1'
    implementation 'org.bouncycastle:bcprov-jdk15on:1.70'
    // ====== hutool 依赖 ======
    implementation 'cn.hutool:hutool-core:5.8.38'
    implementation 'cn.hutool:hutool-crypto:5.8.38'
    implementation 'cn.hutool:hutool-http:5.8.38'
    implementation 'cn.hutool:hutool-json:5.8.38'
}
